# drone-project

./: .gitattributes  .gitmodules  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: push.yml
ComputerVision/: detector.py  readme
ComputerVision/input/: readme
ComputerVision/models/: readme
ComputerVision/output/: readme
bashScript/: readme.d
docs/: drone_ground_protocols.md  drone_internal_protocols.md
flightControllingAlgorithm/: flightAlgorithm.ino
flightControllingAlgorithm/flightAlgorithm/: flightAlgorithm.ino
flightControllingAlgorithm/flightAlgorithm2/: flightAlgorithm2.ino
flightControllingAlgorithm/flightAlgorithmTesting/: flightAlgorithmTesting.ino
icaros/: Cargo.toml  start.sh
icaros-base/: Cargo.toml
icaros-base/src/: core.rs  lib.rs
icaros-base/src/comms/: air.rs  common.rs  controller.rs  mod.rs
icaros-base/src/comms/air/: scheduler.rs
icaros-base/src/utils/: crc16.rs  mod.rs  quartenion.rs  vector.rs
icaros-control/: Cargo.toml
icaros-control/src/: core.rs  gamepad.rs  main.rs  web.rs
icaros-control/src/comms/: mod.rs  rf24.rs  udp.rs
icaros-control/src/web/: video.rs
icaros-control/www/: cameraSocket.js  droneJavaScript.js  index.html  serverConnection.js  style.css
icaros-control/www-test/js/: app.js
icaros-control/www/js/: app.js
icaros-docs/: aliases.js  search-index.js  settings.html  source-files.js
icaros-docs/icaros/: all.html  constant.CONTROLLER_SERIAL_PORT_PATH.html  constant.GPS_SERIAL_PORT_PATH.html  fn.main.html  index.html  sidebar-items.js
icaros-docs/icaros_base/: all.html  index.html  sidebar-items.js  struct.BincodeConfig.html
icaros-docs/icaros_control/: all.html  fn.get_scheduler.html  fn.main.html  index.html  sidebar-items.js
icaros-docs/rf24/: all.html  enum.CRCLength.html  enum.DataRate.html  enum.PowerAmplifierLevel.html  enum.RF24Error.html  enum.SPISpeed.html  index.html  sidebar-items.js  struct.InterruptData.html  (+1 more)
icaros/ext/: picamerad.py
icaros/src/: core.rs  esb.rs  main.rs
icaros/src/comms/: application.rs  common.rs  mod.rs
icaros/src/comms/air/: base.rs  dummy.rs  mod.rs  rf24.rs  simulated.rs  udp.rs
icaros/src/comms/controller/: base.rs  dummy.rs  mod.rs  scheduler.rs  serial.rs  simulated.rs
icaros/src/comms/ground/: base.rs  dummy.rs  mod.rs  rf24.rs
icaros/src/hardware/: camera.rs  gps.rs  mod.rs  serialport.rs
icaros/src/utils/: mod.rs  quartenion.rs  vector.rs
rf24/: Cargo.toml
rf24-sys/: Cargo.toml  build.rs  wrapper.hpp
webSide/: cameraSocket.js  droneClient.html  droneJavaScript.js  readme  serverConnection.js  style.css
(+408 files in other folders)
