[package]
name = "icaros-control"
version = "0.1.0"
authors = ["Ignacio <nnubes256@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icaros-base = { path = "../icaros-base" }
futures = { version = "0.3" }
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2" }
bytes = "0.5"
warp = "0.2"
rweb = "0.4"
parking_lot = "0.10"
log = "0.4"
flexi_logger = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pin-project-lite = "0.1"
regex = "1.3"
lazy_static = "1.4"
memchr = "2.2"
gilrs = "0.7.2"

[target.armv7-unknown-linux-gnueabihf.dependencies]
rf24 = { path = "../rf24" }
