[package]
name = "icaros"
version = "0.1.0"
authors = ["Ignacio <nnubes256@gmail.com>"]
edition = "2018"

[dependencies]
icaros-base = { path = "../icaros-base" }
rf24 = { path = "../rf24" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode2 = "2.0"
err-derive = "0.2"
serialport = "3.3"
log = "0.4"
flexi_logger = "0.14"
byteorder = "1"
nmea = "0.0.8"
inline-python = "0.4.0"
parking_lot = "0.10"
hwloc = "0.5"
